--- a/site/templates/homepage.tmpl
+++ b/site/templates/homepage.tmpl
@@ -1,6 +1,6 @@
 <%inherit file="base.tmpl"/>
 
-<%block name="content_post">
+<%block name="front_page">
   <div id="fullpage">
     ${post.text()}
   </div>
