--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1,3 +1,13 @@
+/* shared */
+[class*=title] {
+    font-size: 48px;
+    color: #000;
+    position: relative;
+    display: inline-block;
+    /* margin-bottom: 40px; */
+    margin-top: 40px;
+}
+
 /* home page */
 .first {
     background-image: url("/first_section_bg.png");
@@ -36,54 +46,38 @@
     margin-left: 80px;
 }
 
-/* .admonition-title {
-    margin-top: 1rem;
-    margin-bottom: 0.75rem;
-}
-
-a.btn > i.fa {
-    font-size: 20px;
-    vertical-align: middle;
-    margin: 0.5rem 0;
-}
-.home-logo, .section.first.fp-section .admonition{
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.admonition .admonition-date {
-    color: #fff;
-    text-align: center;
-    font-size: 28px;
-    font-weight: bold;
-}
-.admonition .admonition-title a {
-    color: #fff;
-    margin-bottom: 15px;
-    font-size: 36px;
-    font-weight: bold;
-}
-.admonition .list-inline-item a {
-    background: #fff;
-    border: #fff;
-}
-.admonition .list-inline-item a i {
-    color: #3b91d0;
-    font-size: 20px;
-} */
-
 /* news section */
 .news-section {
     background-image: url("/upside_down_city.png");
     background-repeat: repeat-x;
     background-size: 100%;
     background-position: top;
+    padding-top: 40px;
 }
 
-.news {
+.news, .countdown {
     text-align: center;
+}
+.news .news-title {
+    margin-bottom: 40px;
+}
+.news .schedule p {
+    text-align: left;
+}
+.schedule .event-description {
+    font-size: 18px;
+    margin-left: 20px;
+}
+
+.countdown-title {
+    font-size: 20px;
+}
+.countdown-timer {
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+.get-ticket-btn {
+    background-color: #A9173F;
 }
 
 /*Keynote section*/
@@ -96,14 +90,14 @@ a.btn > i.fa {
     padding: 0 50px;
     position: relative;
 }
-.keynote .keynote-title {
+/* .countdown-title, .news-title, .keynote-title {
     font-size: 48px;
-    color: #063B61;
+    color: #000;
     position: relative;
     display: inline-block;
     /* margin-bottom: 40px; */
     margin-top: 40px;
-}
+} */
 .keynote .image-bg {
     position: absolute;
     bottom: 0;
@@ -122,7 +116,7 @@ a.btn > i.fa {
     width: 200px;
     height: 3px;
 } */
-.keynote .keynote-title:after {
+.red-underline:after {
     content: "";
     position: absolute;
     bottom: 8px;
