add countdown for both languages

--- a/site/templates/homepage.tmpl
+++ b/site/templates/homepage.tmpl
@@ -6,6 +6,7 @@
   </div>
 
   <script>
+    // for fullpage.js
     new fullpage('#fullpage', {
       css3: true,
       scrollingSpeed: 1000,
@@ -14,7 +15,7 @@
       responsiveHeight: 330,
       fitToSection: true,
       paddingBottom: '4rem',
-      scrollOverflow: true
+      scrollOverflow: true,
     });
   </script>
 </%block>
