Add Istok Web default font from Google Fonts

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1,4 +1,8 @@
 /* shared */
+body {
+  font-family: "Istok Web", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
+}
 
 [class*="title"] {
   font-size: 48px;
