--- a/site/templates/base.tmpl
+++ b/site/templates/base.tmpl
@@ -8,6 +8,8 @@ ${base.html_headstart()}
 </%block>
 ${template_hooks['extra_head']()}
 
+<link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
+
 </head>
 <body class="${' '.join(pagekind)} path-${'-'.join([p for p in permalink.replace('/'+lang+'/', '', 1).split('/') if p] or ['frontpage'])}">
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
