--- a/site/templates/base.tmpl
+++ b/site/templates/base.tmpl
@@ -9,6 +9,7 @@ ${base.html_headstart()}
 ${template_hooks['extra_head']()}
 
 <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
 <body class="${' '.join(pagekind)} path-${'-'.join([p for p in permalink.replace('/'+lang+'/', '', 1).split('/') if p] or ['frontpage'])}">
