--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -52,38 +52,35 @@ body {
 }
 
 .first .main-title {
-  font-size: 104px;
-  position: relative;
-  width: fit-content;
+  font-size: 3rem;
 }
 
-.first .when,
-.first .place,
-.first .edition {
-  font-size: 22px;
-  position: absolute;
-}
+/* .first .when, */
+/* .first .place, */
+/* .first .edition { */
+/*   font-size: 22px; */
+/*   position: absolute; */
+/* } */
 
-.first .when {
-  left: 10px;
-  top: 5px;
-}
+/* .first .when { */
+/*   left: 10px; */
+/*   top: 5px; */
+/* } */
 
-.first .place {
-  right: 150px;
-  bottom: -10px;
-}
+/* .first .place { */
+/*   right: 150px; */
+/*   bottom: -10px; */
+/* } */
 
-.first .edition {
-  right: 160px;
-  top: 5px;
-}
+/* .first .edition { */
+/*   right: 160px; */
+/*   top: 5px; */
+/* } */
 
 .first .invitation {
-  font-size: 16px;
-  width: 35%;
+  font-style: italic;
   text-align: right;
-  margin-top: 30px;
+  z-index: 10;
 }
 
 .first .img-responsive {
@@ -91,9 +88,19 @@ body {
   margin-left: 80px;
 }
 
+.sun-logo {
+  position: absolute;
+  width: 10rem;
+  height: 10rem;
+  /* top: -10%; */
+  left: 20%;
+}
+
 .palm-trees {
   position: relative;
   bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* news section */
@@ -652,3 +659,16 @@ body[class*="schedule"] table.table.day2 tr:nth-of-type(15) {
 /* 17    * - 16:55 - Keynote: Tiwa York */
 
 /* 18    * - 17:40 - Closing */
+
+/* Utility classes */
+
+.flex {
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.w-full {
+  width: 100%;
+}
