--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -717,3 +717,29 @@ article {
   width: 200px;
   height: 200px;
 }
+
+.navbar {
+  background: #ffc400;
+}
+
+element {
+  --font-text: "open sans", cursive;
+}
+
+.navbar-nav > .nav-item > .nav-link {
+  font-family: var(--font-text);
+  font-weight: bold;
+  color: #22292f;
+  font-size: 0.8rem;
+}
+
+.navbar-brand {
+  font-family: var(--font-text);
+  font-weight: bold;
+  color: #22292f;
+  font-size: 0.8rem;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(34, 41, 47, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
