--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1,4 +1,8 @@
 /* shared */
+:root {
+  --font-primary: "open sans", cursive;
+}
+
 body {
   font-family: "Istok Web", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -722,19 +726,15 @@ article {
   background: #ffc400;
 }
 
-element {
-  --font-text: "open sans", cursive;
-}
-
 .navbar-nav > .nav-item > .nav-link {
-  font-family: var(--font-text);
+  font-family: var(--font-primary);
   font-weight: bold;
   color: #22292f;
   font-size: 0.8rem;
 }
 
 .navbar-brand {
-  font-family: var(--font-text);
+  font-family: var(--font-primary);
   font-weight: bold;
   color: #22292f;
   font-size: 0.8rem;
