Adjust default fonts

--- a/site/templates/base.tmpl
+++ b/site/templates/base.tmpl
@@ -8,7 +8,7 @@ ${base.html_headstart()}
 </%block>
 ${template_hooks['extra_head']()}
 
-<link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Open+Sans:400,700,700i" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
