Fix main Pycon Thailand font

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -4,6 +4,8 @@
     Roboto, "Helvetica Neue", Arial, sans-serif;
   --font-secondary: "Montserrat", Garamond, "Hoefler Text", Palatino,
     "Palatino Linotype", serif;
+  --font-bold: 700;
+  --font-extrabold: 800;
 }
 
 body {
@@ -744,4 +746,10 @@ article {
 
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(34, 41, 47, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.pycon-thailand h1 {
+  font-family: var(--font-secondary);
+  font-weight: var(--font-extrabold);
+  text-transform: uppercase;
 }
