Style menu dropdown in nav

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -759,3 +759,11 @@ article {
   font-weight: var(--font-extrabold);
   text-transform: uppercase;
 }
+
+.dropdown-menu {
+  border: 1px solid var(--black);
+}
+
+.dropdown-item {
+  color: var(--black);
+}
