--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -7,6 +7,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "FC Active";
+  src: local("FC Active Italic"), local("FCActiveItalic"),
+    url("/FCActiveItalic.woff2") format("woff2");
+  font-weight: normal;
+  font-style: italic;
+}
+
 :root {
   --font-primary: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "FC Active", sans-serif;
