Replace header bg with radial-gradient

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -73,9 +73,7 @@ body {
 /* home page */
 
 .first {
-  background-image: url("/first_section_bg.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background: radial-gradient(yellow, orange);
 }
 
 .first .main-title {
